--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
 	<title>Awesome Home</title>
 	<link rel="stylesheet" href="../static/css/normalize.css" />
 	<link rel="stylesheet" href="../static/css/domo.css">
+	{% block estilos %}{% endblock %}
 </head>
 <body onload="Inicio()">
 	<header>
@@ -28,29 +29,46 @@
 	<nav>
 		<input type="hidden" id="hiddenPuerto" value="" />
 		<input type="hidden" id="hiddenDb" value="{{ sJsonLuz }}" />
-
-		<ul class="menu">
-			<li class="menuLuz" onclick="mostrarTablaLuz()">
-				<a href="#">
-					<span class="Luz">Luz</span>
-				</a>
-			</li>
-			<li class="menuAire" onclick="mostrarAire()">
-				<a href="#">
-					<span class="Aire">Aire</span>
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<span class="opciones">Opciones</span>
-				</a>
-			</li>
-			<li>
-				<a href="../cerrar">
-					<span class="cerrar">Cerrar Sesión</span>
-				</a>
-			</li>
-		</ul>
+		<div class="movil">
+			<ul class="menu">
+				<li class="menuLuz" onclick="mostrarTablaLuz()">
+					<a href="#">
+						<span class="Luz">Luz</span>
+					</a>
+				</li>
+				<li class="menuAire" onclick="mostrarAire()">
+					<a href="#">
+						<span class="Aire">Aire</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="opciones">Opciones</span>
+					</a>
+				</li>
+				<li>
+					<a href="../cerrar">
+						<span class="cerrar">Cerrar Sesión</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<div class="escritorio">
+			<div class="logoPrincipal">
+			</div>
+			<div class="opcion" onclick="location.href='../inicio'">
+				<div class="logoMenu"></div>
+				<span>Inicio</span>
+			</div>
+			<div class="opcion" onclick="location.href='../opciones'">
+				<div class="logoMenu"></div>
+				<span>Opciones</span>
+			</div>
+			<div class="opcion" onclick="location.href='../cerrar'">
+				<div class="logoMenu"></div>
+				<span>Cerrar sesión</span>
+			</div>
+		</div>
 	</nav>
 	{% endif %}
 	<section>
@@ -71,7 +89,6 @@
 	</footer>
 
 	<!--Carga de jquery y algunos scripts-->
-	<script type="text/javascript" src="../static/js/jquery-1.11.3.min.js" ></script>
-	<script type="text/javascript" src="../static/js/Domo.js" ></script>
+	{% block javascript %}{% endblock %}
 </body>
 </html>
