se crearon 3 url para las opciones y creacion de usuarios y puertos; el template opciones fue cambiado para que quedara como plantilla para las otras dos, el template de formularios de creacion en las opciones es el mismo y se creo un css nuevo para ocultar el menu de opciones en vista movil; falta agregar el css de los formularios en vista de escritorio

--- a/app/static/css/domo.css
+++ b/app/static/css/domo.css
@@ -1,184 +1,1 @@
-body {
-  color: #444;
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  height: 100%;
-  min-height: 100vh;
-}
-footer {
-  background: #444;
-  bottom: 0;
-  color: rgba(255,255,255,0.5);
-  left: 0;
-  margin-top: 1em;
-  min-height: 5rem;
-  padding: 1em 0;
-  text-align: center;
-  width: 100%;
-}
-footer h3 {
-  font-size: 14px;
-  font-weight: normal;
-}
-footer h3 strong {
-  display: block;
-}
-footer h3 span {
-  display: block;
-}
-footer h3 span:before,
-footer h3 span:after {
-  content: " - ";
-}
-html {
-  position: relative;
-  min-height: 100%;
-}
-header {
-  background: #444;
-  color: rgba(255,255,255,0.5);
-  padding: 0.5em;
-  position: relative;
-}
-header .logo {
-  border-right: 1px solid #fff;
-  bottom: 5px;
-  float: left;
-  position: absolute;
-  top: 5px;
-  width: 60px;
-}
-header .logo img {
-  width: 52px;
-}
-header .logoU {
-  border-left: 1px solid #fff;
-  bottom: 5px;
-  float: right;
-  position: absolute;
-  top: 5px;
-  width: 70px;
-  display: inline-block;
-  right: 3px;
-  padding-top: 7px;
-}
-header .logoU img {
-  margin-left: 10px;
-  width: 52px;
-}
-header .titulo {
-  margin: 0 80px 0 70px;
-}
-header .titulo .title {
-  font-size: 18px;
-  font-weight: normal;
-  height: 3.5em;
-  margin: 0;
-  text-align: center;
-  line-height: 60px;
-}
-nav .escritorio {
-  display: none;
-}
-nav .movil {
-  background: #22bce0;
-  border-left: 10px solid #fff;
-  position: relative;
-}
-nav .movil:before {
-  border-bottom: 20px solid transparent;
-  border-left: 7px solid #fff;
-  border-top: 20px solid transparent;
-  content: "";
-  left: 0px;
-  position: absolute;
-  top: 0;
-}
-nav .movil .menu {
-  height: 40px;
-  line-height: 40px;
-  margin: 0;
-  padding-left: 10px;
-  overflow-x: auto;
-  white-space: nowrap;
-}
-nav .movil .menu li {
-  display: inline-block;
-}
-nav .movil .menu li a {
-  text-decoration: none;
-}
-nav .movil .menu li a span {
-  color: #fff;
-  display: block;
-  margin: 0 0.5em;
-  padding: 0 0.2em;
-}
-nav .movil .menu li:hover {
-  background: rgba(0,0,0,0.1);
-  cursor: pointer;
-}
-nav .movil .menu li:hover span {
-  color: rgba(255,255,255,0.5);
-}
-section {
-  flex: 1;
-}
-@media only screen and (min-device-width: 768px) {
-  nav .escritorio {
-    height: 90%;
-    width: 69px;
-    background-color: #444;
-    display: block;
-    overflow: hidden;
-    position: absolute;
-    -webkit-transition: width 0.5s;
-    -moz-transition: width 0.5s;
-  }
-  nav .escritorio:hover {
-    width: 200px;
-  }
-  nav .escritorio .logoPrincipal {
-    height: 40px;
-    width: 40px;
-    background-image: url("../imagenes/menu.png");
-    background-size: 40px 40px;
-    margin: 10px 10px 70px 14px;
-  }
-  nav .escritorio .opcion {
-    height: 40px;
-    width: 200px;
-    padding: 6px 0 6px 14px;
-  }
-  nav .escritorio .opcion:hover {
-    background: rgba(255,255,255,0.5);
-    cursor: pointer;
-  }
-  nav .escritorio .opcion:nth-child(2) .logoMenu {
-    background-image: url("../imagenes/home.png");
-  }
-  nav .escritorio .opcion:nth-child(3) .logoMenu {
-    background-image: url("../imagenes/config.png");
-  }
-  nav .escritorio .opcion:nth-child(4) .logoMenu {
-    background-image: url("../imagenes/cancel.png");
-  }
-  nav .escritorio .opcion .logoMenu {
-    height: 40px;
-    width: 40px;
-    background-size: 40px 40px;
-    float: left;
-    height: 40px;
-    width: 40px;
-  }
-  nav .escritorio .opcion span {
-    color: rgba(255,255,255,0.5);
-    margin-left: 20px;
-    line-height: 40px;
-  }
-  nav .movil {
-    display: none;
-  }
-}
+body{color:#444;display:flex;flex-direction:column;font-family:Arial,Helvetica,sans-serif;font-size:16px;height:100%;min-height:100vh}footer{background:#444;bottom:0;color:rgba(255,255,255,0.5);left:0;margin-top:1em;min-height:5rem;padding:1em 0;text-align:center;width:100%;}footer h3{font-size:14px;font-weight:normal;}footer h3 strong{display:block}footer h3 span{display:block;}footer h3 span:before,footer h3 span:after{content:" - "}html{position:relative;min-height:100%}header{background:#444;color:rgba(255,255,255,0.5);padding:.5em;position:relative;}header .logo{border-right:1px solid #fff;bottom:5px;float:left;position:absolute;top:5px;width:60px;}header .logo img{width:52px}header .logoU{border-left:1px solid #fff;bottom:5px;float:right;position:absolute;top:5px;width:70px;display:inline-block;right:3px;padding-top:7px;}header .logoU img{margin-left:10px;width:52px}header .sesion{float:right;margin-top:-1.1em;position:relative}header .titulo{margin:0 80px 0 70px;}header .titulo .title{font-size:18px;font-weight:normal;height:3.5em;margin:0;text-align:center;line-height:60px}nav .escritorio{display:none}nav .movil{background:#22bce0;border-left:10px solid #fff;position:relative;}nav .movil:before{border-bottom:20px solid transparent;border-left:7px solid #fff;border-top:20px solid transparent;content:"";left:0;position:absolute;top:0}nav .movil .menu{height:40px;line-height:40px;margin:0;padding-left:10px;overflow-x:auto;white-space:nowrap;}nav .movil .menu li{display:inline-block;}nav .movil .menu li a{text-decoration:none;}nav .movil .menu li a span{color:#fff;display:block;margin:0 .5em;padding:0 .2em}nav .movil .menu li:hover{background:rgba(0,0,0,0.1);cursor:pointer;}nav .movil .menu li:hover span{color:rgba(255,255,255,0.5)}section{flex:1}@media only screen and (min-device-width:768px){nav .escritorio{height:90%;width:69px;background-color:#444;display:block;overflow:hidden;position:absolute;-webkit-transition:width .5s;-moz-transition:width .5s;}nav .escritorio:hover{width:200px}nav .escritorio .logoPrincipal{height:40px;width:40px;background-image:url("../imagenes/menu.png");background-size:40px 40px;margin:10px 10px 70px 14px}nav .escritorio .opcion{height:40px;width:200px;padding:6px 0 6px 14px;}nav .escritorio .opcion:hover{background:rgba(255,255,255,0.5);cursor:pointer}nav .escritorio .opcion:nth-child(2) .logoMenu{background-image:url("../imagenes/home.png")}nav .escritorio .opcion:nth-child(3) .logoMenu{background-image:url("../imagenes/config.png")}nav .escritorio .opcion:nth-child(4) .logoMenu{background-image:url("../imagenes/cancel.png")}nav .escritorio .opcion .logoMenu{height:40px;width:40px;background-size:40px 40px;float:left;height:40px;width:40px}nav .escritorio .opcion span{color:rgba(255,255,255,0.5);margin-left:20px;line-height:40px}nav .movil{display:none}}
