--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -70,6 +70,11 @@ header
 		img
 			margin-left 10px
 			width 52px
+
+	.sesion
+		float right
+		margin-top -1.1em
+		position relative
 			
 	.titulo
 		margin 0 80px 0 70px
