se crean los estilos para las paginas de opciones en version escritorio quedando asi finalizado el diseño de estas paginas; falta ver como se logra colocar los puertos validando la existencia de otro con el mismo numero

--- a/app/static/css/opciones.styl
+++ b/app/static/css/opciones.styl
@@ -56,3 +56,27 @@ section
 							font-weight bold
 							margin 0.5em 0
 							padding 0.2em 0
+
+@media only screen and (min-device-width: 768px)
+	section
+		margin-left 80px
+
+		aside
+			margin-top 3em
+			width 30%
+
+		article
+			position absolute
+			left 37%
+			top 7em
+			width 35%
+
+@media only screen and (min-device-width: 980px)
+	section
+		article
+			left 30%
+
+@media only screen and (min-device-width: 1280px)
+	section
+		article
+			left 23%
