--- a/app/static/css/creaPuerto.css
+++ b/app/static/css/creaPuerto.css
@@ -1,1 +1,1 @@
-section aside{display:none}
+section aside{display:none}@media only screen and (min-device-width:768px){section aside{display:block}}
