--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,7 @@
 			{% if not user.is_anonymous %}
 			<div class="sesion">
 				<span>
+					{# para colocar la primera letra en mayuscula y el resto en minuscula #}
 					Bienvenido {{usuario.username|capfirst}}
 				</span>
 			</div>
@@ -40,7 +41,16 @@
 		<input type="hidden" id="hiddenDb" value="{{ sJsonLuz }}" />
 		<div class="movil">
 			<ul class="menu">
-				{% block navMovil %}{% endblock %}
+				<li class="menuLuz" onclick="mostrarTablaLuz()">
+					<a href="{% url 'app.views.luz' %}">
+						<span class="Luz">Luz</span>
+					</a>
+				</li>
+				<li class="menuAire" onclick="mostrarAire()">
+					<a href="{% url 'app.views.aire' %}">
+						<span class="Aire">Aire</span>
+					</a>
+				</li>
 				<li>
 					<a href="{% url 'app.views.opciones' %}">
 						<span class="opciones">Opciones</span>
