se hicieron cambios a la logica difusa debido a que hacia falta tratarlos como si estuviesen en una clase; se termino el control remoto manual y el control automatico del aire acondicionado; tambien se cambio el proceso del dimmer(se elimino lo que iba dentro del while debido a que no se necesita). Por ultimo, se arregla el touch para el dimmer ya que antes no funcionaba.

--- a/app/templates/luz.html
+++ b/app/templates/luz.html
@@ -35,7 +35,7 @@
 				</figure>
 			</div>
 			<div class="divDimmer">
-				<input type="range" id="idDimmer" name="dimmer" value="100" min="10" max="90" step="10" onmouseup="ProcesoLuz('dimmer')" />
+				<input type="range" id="idDimmer" name="dimmer" value="100" min="10" max="90" step="10" onmouseup="ProcesoLuz('dimmer')" ontouchend="ProcesoLuz('dimmer')" />
 			</div>
 		</div>
 		<div class="infoLuz">
