--- a/app/templates/opciones.html
+++ b/app/templates/opciones.html
@@ -11,6 +11,7 @@
 		<ul>
 			<li><a href="{% url 'app.views.agregarPuerto' %}"><span>Agregar puerto</span></a></li>
 			<li><a href="{% url 'app.views.crearUsuario' %}"><span>Agregar usuario</span></a></li>
+			<li><a href="{% url 'app.views.cambiarPreferenciaAire' %}"><span>Cambiar preferencia aire</span></a></li>
 		</ul>
 	</div>
 </aside>
