Se cambia logica para funcionamiento de aire acondicionado tomando siempre la informacion de la base de datos y no lo configurado.

--- a/app/templates/aire.html
+++ b/app/templates/aire.html
@@ -21,14 +21,7 @@
 		<label id="lManual" ><input value="1" name="uso" type="radio" id="usoManual" onclick="switchControles('manual')" />Manual</label>
 		<label id="lAuto" ><input value="2" name="uso" type="radio" id="usoAuto" onclick="switchControles('auto')" />Automatico</label>
 	</div>
-	<div class="aireAutomatico">
-		<span>Preferencia:</span>
-		<select name="" id="preferencia">
-			<option value="1">Alto</option>
-			<option value="2">Medio</option>
-			<option value="3">Bajo</option>
-		</select>
-	</div>
+	<div class="aireAutomatico"></div>
 	<div class="aireManual">
 		<div class="infoAire">
 			<div>
