--- a/app/templates/aire.html
+++ b/app/templates/aire.html
@@ -21,7 +21,12 @@
 		<label id="lManual" ><input value="1" name="uso" type="radio" id="usoManual" onclick="switchControles('manual')" />Manual</label>
 		<label id="lAuto" ><input value="2" name="uso" type="radio" id="usoAuto" onclick="switchControles('auto')" />Automatico</label>
 	</div>
-	<div class="aireAutomatico"></div>
+	<div class="aireAutomatico">
+		<div class="infoAire">
+			<strong class="estado">Ultima temperatura configurada: </strong>
+			<span id="tempActualAuto">...</span>
+		</div>
+	</div>
 	<div class="aireManual">
 		<div class="infoAire">
 			<div>
@@ -30,7 +35,7 @@
 			</div>
 			<div>
 				<strong class="estado">Ultima temperatura configurada: </strong>
-				<span id="tempActual">15</span>
+				<span id="tempActual">...</span>
 			</div>
 		</div>
 		<figure>
